src/classes/pages/assets/style.css
/* ... */
@keyframes Grow {
    from {
        transform: scale(0.95);
    }

    to {
        transform: scale(1);
    }
}

@keyframes GrowShrink {
    from {
        transform: scale(1);
    }

    50% {
        transform: scale(1.05);
    }

    to {
        transform: scale(1);
    }
}

@keyframes Blink {
    0% {
        opacity: 100%;
    }

    50% {
        opacity: 0%;
    }

    100% {
        opacity: 100%;
    }
}

@keyframes SlideInFromLeft {
    from {
        transform: translateX(-100%);
    }

    to {
        transform: translateX(0);
    }
}

/* stuff for builder */
#_doc {
    overflow: auto;
}

.builder\:page {
    --AlignX: center;
    --AlignY: center;
    --Spacing: 10px;

    width: 100vw;
    height: 100vh;

    gap: var(--Spacing);
    overflow-x: hidden;

    display: flex;
    flex-direction: column;
    align-items: var(--AlignX);
    justify-content: var(--AlignY);

    animation: FadeIn 0.5s 0s running;
}

.builder\:text {
    --Size: 16px;
    --Weight: 400;
    --LineSpacing: 1.5;
    --LetterSpacing: 1;
    --Margins: 0;
    --Padding: 0.2rem;
    --Alignment: initial;
    --BorderRadius: 0;
    --Background: transparent;
    --Color: var(--text-color);
    --Width: max-content;

    font-size: var(--Size);
    font-weight: var(--Weight);
    line-height: var(--LineSpacing);
    letter-spacing: var(--LetterSpacing);
    margin: var(--Margins);
    padding: var(--Padding);
    text-align: var(--Alignment);
    border-radius: var(--BorderRadius);
    background: var(--Background);
    color: var(--Color);
    font-size-adjust: none;
    width: var(--Width);
    max-width: 100%;
}

.builder\:card {
    --Background: var(--background-surface1);
    --Width: max-content;
    --Padding: 1rem;
    --Display: block;
    --Direction: row;
    --JustifyContent: initial;
    --AlignItems: initial;
    --Gap: 0;

    background: var(--Background);
    padding: var(--Padding);
    width: var(--Width);
    max-width: 100vw;
    min-width: 5rem;
    overflow: auto;
    height: max-content;

    display: var(--Display);
    flex-wrap: wrap;
    justify-content: var(--JustifyContent);
    align-items: var(--AlignItems);
    flex-direction: var(--Direction);
    gap: var(--Gap);
}

.builder\:card .builder\:card {
    max-width: 100%;
}

.builder\:embed {
    padding: 0.5rem;
}

.builder\:embed[src="about:blank"] {
    background: var(--background-surface-1);
    cursor: move !important;
}

.builder\:source {
    --Display: block;
    display: var(--Display);
}

.builder\:toolbar {
    position: fixed;
    top: 0.5rem;
    right: 0.5rem;
    border-radius: 0.25rem;
    background: var(--background-surface1);
    display: flex;
    flex-wrap: wrap;
    gap: 0.4rem;
    padding: 0.5rem;
    border: solid 1px var(--background-surface2);
    justify-content: center;
    align-items: center;
    height: 3.5rem;

    animation: FadeIn 0.75s 0s running;
}

.builder\:toolbar button {
    border-radius: 0.25rem;
    background: var(--background-surface1);
}

.builder\:toolbar button:hover {
    background: var(--background-surface1-5a);
}

.builder\:sidebar {
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    width: 25rem;
    border-right: solid 1px var(--background-surface2);
    background: var(--background-surface1);
    display: flex;
    flex-direction: column;
    animation: SlideInFromLeft 0.15s 0s running;
    overflow: auto;
}

.builder\:sidebar button,
.option {
    width: 100%;
    padding: 0.5rem;
    border-bottom: solid 1px var(--background-surface2);
    display: flex;
    gap: 0.4rem;
}

.builder\:sidebar input,
.builder\:sidebar textarea,
.builder\:sidebar select {
    border-radius: 0.4rem !important;
}

.option {
    flex-direction: column;
}

.builder\:event-zone {
    display: contents;
}

.builder\:drag-element {
    position: relative;
    max-width: 100%;
}

.builder\:drag-zone {
    user-select: none;
    -webkit-user-select: none;
    width: 100%;
    padding: 0.5rem;
    display: none;
    height: 5px;
    position: absolute;
}

.builder\:drag-zone.top {
    border-top: dashed 2px var(--background-surface2);
    top: -10px;
}

.builder\:drag-zone.bottom {
    border-bottom: dashed 2px var(--background-surface2);
    bottom: -10px;
}

.builder\:drag-zone.active {
    border-color: var(--blue2);
    display: block;
}

.component[data-edit="true"] {
    cursor: pointer;
}

.component.hover,
.component.active {
    outline: solid 2px var(--blue2);
}

.component h1 {
    width: 100%;
}

.component h1,
.component h2,
.component h3,
.component h4,
.component h5,
.component h6 {
    text-align: var(--Alignment);
}

.component * .htag {
    display: none;
}

.builder\:toolbar.always-absolute {
    height: max-content !important;
}

@media screen and (max-width: 900px) {
    .component.builder\:page[data-edit="true"] {
        /* adjust for toolbar */
        padding-top: 3.5rem;
    }

    .builder\:toolbar:not(.always-absolute) {
        width: 100vw;
        top: 0;
        left: 0;
        border-radius: 0;
    }

    .builder\:sidebar {
        width: 100vw;
    }
}

